--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to IIIT Vadodara</title>
+    <title>Welcome to DLS College Mutwal</title>
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
@@ -25,8 +25,8 @@
                                                                              alt="logo"></a></div>
                         <div class="name">
                             <a href="index.html" title="">
-                                <h5>Indian Institute of Information Technology</h5>
-                                <h5 class="primary-color">Vadodara</h5>
+                                <h5>De La Salle College Colombo 15</h5>
+                                <h5 class="primary-color">Mutwal</h5>
                             </a>
                         </div>
                     </div>
