--- a/gallery.html
+++ b/gallery.html
@@ -265,6 +265,60 @@
                                                     </div>
                         --> <img src="img/thumbnail/winners.jpg" alt="">
                     </a>
+		   <!--Image 12-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/yoga2.jpg">
+                                                    <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>International Yoga Day</span>
+                                                        </div>
+                                                    </div>
+                         <img src="img/thumbnail/yoga2.jpg" alt="">
+                    </a>
+		   <!--Image 13-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/yoga3.jpg">
+                                                    <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>International Yoga Day</span>
+                                                        </div>
+                                                    </div>
+                         <img src="img/thumbnail/yoga3.jpg" alt="">
+                    </a>
+		   <!--Image 14-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/AppliedCSwithAndroid1.jpg">
+                                                    <!--<div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>International Yoga Day</span>
+                                                        </div>
+                                                    </div>-->
+                         <img src="img/thumbnail/AppliedCSwithAndroid1.jpg" alt="">
+                    </a>
+		   <!--Image 15-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/AppliedCSwithAndroid_Group.jpg">
+                                                    <!--<div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>International Yoga Day</span>
+                                                        </div>
+                                                    </div>-->
+                         <img src="img/thumbnail/AppliedCSwithAndroid_Group.jpg" alt="">
+                    </a>
+		   <!--Image 16-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/NA1.jpg">
+                                                    <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>National Anthem "Yaad Karo Kurbani"</span>
+                                                        </div>
+                                                    </div>
+                         <img src="img/thumbnail/NA1.jpg" alt="">
+                    </a>
+		   <!--Image 17-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/NA2.jpg">
+                                                    <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>National Anthem "Yaad Karo Kurbani"</span>
+                                                        </div>
+                                                    </div>
+                         <img src="img/thumbnail/NA2.jpg" alt="">
+                    </a>
 
                 </div>
             </div>
