Update Bridge between the College and the Old Boys.html

--- a/Bridge between the College and the Old Boys.html
+++ b/Bridge between the College and the Old Boys.html
@@ -137,7 +137,7 @@
             <!-- Contents starts here -->
             <div class="content">
                 <h1>Bridge between the College and the Old Boys</h1>
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ1Cr5hkNGMOlPp9lb_nAYJQn8QwsUGzoOM-drCl86VkqE5l8JuHvZ03W-WfJ-eZA/pub?embedded=true"></iframe>
+                <img src="https://docs.google.com/document/d/e/2PACX-1vQ1Cr5hkNGMOlPp9lb_nAYJQn8QwsUGzoOM-drCl86VkqE5l8JuHvZ03W-WfJ-eZA/pub?embedded=true"></img>
                 
                 <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
