--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b
-                                        class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute </a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="directors_message.html">Director's Message</a></li>
