--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute </a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b
+                                        class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="directors_message.html">Director's Message</a></li>
@@ -140,6 +141,7 @@
         </nav>
     </header>
     <!-- /header -->
+
 
     <!-- Source: https://www.jssor.com/demos/image-slider.slider/=edit -->
     <script src="js/jssor.slider-28.1.0.min.js" type="text/javascript"></script>
