--- a/index.html
+++ b/index.html
@@ -142,6 +142,32 @@
     </header>
     <!-- /header -->
 
+    <!-- carousel -->
+    <div class="carousel-wrapper">
+        <div class="carousel" style="margin: 0 auto">
+            <div class="carousel-items">
+                <img height="400px" src="img/gallery/faculty.jpg" alt="Faculty">
+                <div></div>
+            </div>
+            <div class="carousel-items">
+                <img height="400px" src="img/gallery/gallery.jpg" alt="Gallery">
+                <div></div>
+            </div>
+            <div class="carousel-items">
+                <img height="400px" src="img/gallery/students.jpg" alt="Students">
+                <div></div>
+            </div>
+            <div class="carousel-items">
+                <img height="400px" src="img/gallery/talk.jpg" alt="Talk">
+                <div></div>
+            </div>
+            <div class="carousel-items">
+                <img height="400px" src="img/gallery/winners.jpg" alt="Winners">
+                <div></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Source: https://www.jssor.com/demos/image-slider.slider/=edit -->
     <script src="js/jssor.slider-28.1.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
