--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
     </div>
 
-    <!-- Source: https://www.jssor.com/demos/image-slider.slider/=edit -->
+    <!-- Source: https://www.jssor.com/demos/image-slider.slider/=edit
     <script src="js/jssor.slider-28.1.0.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         window.jssor_1_slider_init = function() {
@@ -267,7 +267,7 @@
         .jssora051:hover {opacity:.8;}
         .jssora051.jssora051dn {opacity:.5;}
         .jssora051.jssora051ds {opacity:.3;pointer-events:none;}
-    </style>
+    </style> -->
     <div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:380px;overflow:hidden;visibility:hidden;">
         <!-- Loading Screen -->
         <div data-u="loading" class="jssorl-004-double-tail-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
