--- a/index.html
+++ b/index.html
@@ -524,44 +524,48 @@
     <!-- Footer -->
     <footer>
         <div class="footer-wrapper">
-            <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
-            <div class="row">
-                <div class="col-sm-4 address">
-                    <strong>Address : </strong>c/o Block No.9 (IC Department), Government Engineering College,
+            <span class="logo"><img style="border-radius: 100%"  src="http://iiitvadodara.ac.in/img/New-Logo.png" alt=""></span>
+           <div class="row">
+                <!--<div class="col-sm-4 address">-->
+				<p>
+                    <strong>Address : </strong>c/o Block No.9, Government Engineering College,
                     Sector-28, Gandhinagar, Gujarat - 382028
-                </div>
-                <div class="col-sm-4 links">
-                    <div>
-                        <a href="#news">News</a>
+				</p>
+                <!--</div>-->
+                <!--<div class="col-sm-4 links">-->
+                    <p>
+                        <a href="../#news">News</a>
                         <i class="seperator"></i>
-                        <a href="#announcements">Announcement</a>
+                        <a href="../#announcements">Announcement</a>
                         <i class="seperator"></i>
-                        <a href="#events">Events</a>
-                    </div>
-                    <div>
-                        <a href="#">Home</a>
+                        <a href="../#events">Events</a>
+                    	<i class="seperator"></i>
+                        <a href="../#">Home</a>
                         <i class="seperator"></i>
-                        <a href="rti.html">RTI</a>
+                        <a href="http://iiitvadodara.ac.in/rti.php">RTI</a>
                         <i class="seperator"></i>
-                        <a href="pdf/MOU.pdf">MOU</a>
-                    </div>
-                    <div>
-                        <a href="admissions.html">Admission</a>
+                        <a href="http://iiitvadodara.ac.in/pdf/MOU.pdf" target="_blank">MOU</a>
+                    	<i class="seperator"></i>
+                        <a href="../admissions.php">Admission</a>
                         <i class="seperator"></i>
-                        <a href="student_corner.html">Student</a>
+                        <a href="http://iiitvadodara.ac.in/student_corner.php">Student</a>
                         <i class="seperator"></i>
-                        <a href="faculty.html">Faculty</a>
-                    </div>
-                </div>
-                <div class="col-sm-4 footer-social">
+                        <a href="http://iiitvadodara.ac.in/faculty.php">Faculty</a>
+                    	&nbsp;&nbsp;&nbsp;
+               <!-- </div>-->
+               <!-- <div class="col-sm-4 footer-social">-->
                     <a href="#!"><i class="fa fa-facebook" aria-hidden="true" title="Official Facebook Page"></i></a>
-                    <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
-                                                          title="Github Group"></i></a>
+                    <!--<a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
+                                                          title="Github Group"></i></a>-->
                     <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
                     <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
                                              title="Official Twitter Account"></i></a>
-                </div>
+				</p>
+                <!--</div>-->
             </div>
+			<div>  
+			<p style="text-align: justify;"><font size="1.5" color="#383736">Disclaimer:<br/> The contents in the website are for information purpose only. IIIT Vadodara regularly monitors and updates the information on this website. We attempt to ensure that the information on this website is correct, however, we do not warrant its completeness or accuracy. No rights can be derived from the information contained in the IIIT Vadodara website. The website may contain links to websites of third party organizations. IIIT Vadodara cannot be held responsible for any consequences arising from the use of information obtained from these websites.</font></p>
+			</div>
         </div>
     </footer>
 </div>
