--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 				</p>
                 <!--</div>-->
                 <!--<div class="col-sm-4 links">-->
-                    <p>
+                 <center>   <p>
                         <a href="../#news">News</a>
                         <i class="seperator"></i>
                         <a href="../#announcements">Announcement</a>
@@ -560,7 +560,7 @@
                     <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
                     <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
                                              title="Official Twitter Account"></i></a>
-				</p>
+				</p> </center>
                 <!--</div>-->
             </div>
 			<div>  
