--- a/index.html
+++ b/index.html
@@ -527,10 +527,10 @@
             <span class="logo"><img style="border-radius: 100%"  src="http://iiitvadodara.ac.in/img/New-Logo.png" alt=""></span>
            <div class="row">
                 <!--<div class="col-sm-4 address">-->
-				<p>
+			<center>	<p>
                     <strong>Address : </strong>c/o Block No.9, Government Engineering College,
                     Sector-28, Gandhinagar, Gujarat - 382028
-				</p>
+				</p> </center>
                 <!--</div>-->
                 <!--<div class="col-sm-4 links">-->
                  <center>   <p>
