--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                 </div>
                 <div class="header-links">
                     <a href="#" data-toggle="popover" title="Address"
-                       data-content="c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028"
+                       data-content="c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka"
                        data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
 
-                    <a href="#" data-toggle="popover" title="Phone No." data-content="+91-79-29750281"
+                    <a href="#" data-toggle="popover" title="Phone No." data-content="+94-112 522 125"
                        data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
 
-                    <a href="#" data-toggle="popover" title="Email" data-content="helpdesk@iiitvadodara.ac.in"
+                    <a href="#" data-toggle="popover" title="Email" data-content="college@delasalle.lk"
                        data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
                 </div>
             </div>
@@ -528,8 +528,7 @@
            <div class="row">
                 <!--<div class="col-sm-4 address">-->
 			<center>	<p>
-                    <strong>Address : </strong>c/o Block No.9, Government Engineering College,
-                    Sector-28, Gandhinagar, Gujarat - 382028
+                    <strong>Address : </strong>c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
 				</p> </center>
                 <!--</div>-->
                 <!--<div class="col-sm-4 links">-->
