--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-wrapper">
-            <span class="logo"><img style="border-radius: 100%"  src="http://iiitvadodara.ac.in/img/New-Logo.png" alt=""></span>
+            <span class="logo"><img style="border-radius: 100%"  src="img/IIITV_Logo_1x1_small.png" alt=""></span>
            <div class="row">
                 <!--<div class="col-sm-4 address">-->
 			<center>	<p>
