--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                 <!--</div>-->
             </div>
 			<div>  
-			<p style="text-align: justify;"><font size="1.5" color="#383736">Disclaimer:<br/> The contents in the website are for information purpose only. IIIT Vadodara regularly monitors and updates the information on this website. We attempt to ensure that the information on this website is correct, however, we do not warrant its completeness or accuracy. No rights can be derived from the information contained in the IIIT Vadodara website. The website may contain links to websites of third party organizations. IIIT Vadodara cannot be held responsible for any consequences arising from the use of information obtained from these websites.</font></p>
+			<p style="text-align: justify;"><font size="1.5" color="#383736">Disclaimer:<br/> The contents in the website are for information purpose only. DLS College ICT Unite regularly monitors and updates the information on this website. We attempt to ensure that the information on this website is correct, however, we do not warrant its completeness or accuracy. No rights can be derived from the information contained in the DLS College Official website. The website may contain links to websites of third party organizations.We cannot be held responsible for any consequences arising from the use of information obtained from these websites.</font></p>
 			</div>
         </div>
     </footer>
