--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="header-container">
                 <div>
                     <div class="logo-name">
-                        <div class="logo"><a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.jpg"
+                        <div class="logo"><a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.png"
                                                                              alt="logo"></a></div>
                         <div class="name">
                             <a href="index.html" title="">
@@ -524,7 +524,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-wrapper">
-            <span class="logo"><img style="border-radius: 100%"  src="img/IIITV_Logo_1x1_small.jpg" alt=""></span>
+            <span class="logo"><img style="border-radius: 100%"  src="img/IIITV_Logo_1x1_small.png" alt=""></span>
            <div class="row">
                 <!--<div class="col-sm-4 address">-->
 			<center>	<p>
