--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="directors_message.html">Director's Message</a></li>
                                     <li><a href="bog.html">Board of Governors</a></li>
-                                    <li><a href="society_members.html">Society Members</a></li>
+                                    <li><a href="Chronology College History.html">Chronology College History</a></li>
                                     <li><a href="academic_council.html">Academic Council</a></li>
                                     <li><a href="finance_committee.html">Finance Committee</a></li>
                                     <li><a href="rti.html">RTI</a></li>
