Update Chronology College History.html

--- a/Chronology College History.html
+++ b/Chronology College History.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>De La Salle College Colombo 15 | About</title>
+    <title>De La Salle College Colombo 15 | Chronology College History</title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
@@ -56,10 +56,10 @@
                                 <li class="active">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li class="active"><a href="about.html">About</a></li>
+                                        <li class="active"><a href="Chronology College History.html">About</a></li>
                                         <li><a href="directors_message.html">Director's Message</a></li>
                                         <li><a href="bog.html">Board of Governors</a></li>
-                                        <li><a href="society_members.html">Society Members</a></li>
+                                        <li><a href="Chronology College History.html">Chronology College History</a></li>
                                         <li><a href="academic_council.html">Academic Council</a></li>
                                         <li><a href="finance_committee.html">Finance Committee</a></li>
                                         <li><a href="rti.html">RTI</a></li>
