--- a/Chronology College History.html
+++ b/Chronology College History.html
@@ -56,7 +56,7 @@
                                 <li class="active">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li class="active"><a href="Chronology College History.html">About</a></li>
+                                        <li class="active"><a href="about.html">About</a></li>
                                         <li><a href="directors_message.html">Director's Message</a></li>
                                         <li><a href="bog.html">Board of Governors</a></li>
                                         <li><a href="Chronology College History.html">Chronology College History</a></li>
