Update Chronology College History.html

--- a/Chronology College History.html
+++ b/Chronology College History.html
@@ -56,10 +56,10 @@
                                 <li class="active">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li class="active"><a href="about.html">About</a></li>
+                                        <li><a href="about.html">About</a></li>
                                         <li><a href="directors_message.html">Director's Message</a></li>
                                         <li><a href="bog.html">Board of Governors</a></li>
-                                        <li><a href="Chronology College History.html">Chronology College History</a></li>
+                                        <li class="active"><a href="Chronology College History.html">Chronology College Historys</a></li>
                                         <li><a href="academic_council.html">Academic Council</a></li>
                                         <li><a href="finance_committee.html">Finance Committee</a></li>
                                         <li><a href="rti.html">RTI</a></li>
