--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="about.html">About</a></li>
+                                    <li class="dropdown-submenu">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="linkages/da-iict.html">DA-IICT</a></li>
+                                            <li><a href="linkages/gsfc.html">GSFC</a></li>
+                                            <li><a href="linkages/germi.html">GERMI</a></li>
+                                            <li><a href="linkages/tcs.html">TCS</a></li>
                                     <li><a href="directors_message.html">Director's Message</a></li>
                                     <li><a href="bog.html">Board of Governors</a></li>
                                     <li><a href="Chronology College History.html">Chronology College History</a></li>
@@ -70,13 +77,7 @@
                                     <li><a href="finance_committee.html">Finance Committee</a></li>
                                     <li><a href="rti.html">RTI</a></li>
                                     <li><a href="pdf/MOU.pdf">MOU</a></li>
-                                    <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Linkages</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="linkages/da-iict.html">DA-IICT</a></li>
-                                            <li><a href="linkages/gsfc.html">GSFC</a></li>
-                                            <li><a href="linkages/germi.html">GERMI</a></li>
-                                            <li><a href="linkages/tcs.html">TCS</a></li>
+                                    
                                         </ul>
                                     </li>
                                 </ul>
