--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
                             <li>
+                                <li class="dropdown-submenu"></li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b
                                         class="caret"></b></a>
+                                    </li>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="about.html">About</a></li>
                                     <li class="dropdown-submenu">
