--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
                                             <li><a href="linkages/tcs.html">TCS</a></li>
                                         </ul>
                                     </li>
+                                    <li class="dropdown-submenu">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="linkages/da-iict.html">History Of College</a></li>
+                                            <li><a href="Chronology College History.html">Chronology College History</a></li>
+                                            <li><a href="linkages/germi.html">Past Recters</a></li>
+                                            <li><a href="linkages/tcs.html">TCS</a></li>
+                                        </ul>
+                                    </li>
 
                                     <li><a href="directors_message.html">Director's Message</a></li>
                                     <li><a href="bog.html">Board of Governors</a></li>
