--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="linkages/da-iict.html">DA-IICT</a></li>
-                                            <li><a href="linkages/gsfc.html">GSFC</a></li>
-                                            <li><a href="linkages/germi.html">GERMI</a></li>
-                                            <li><a href="linkages/tcs.html">TCS</a></li>
+                                            <li><a href="linkages/da-iict.html">Vision & Mission</a></li>
+                                            <li><a href="linkages/gsfc.html">Flag</a></li>
+                                            <li><a href="linkages/germi.html">Crest</a></li>
+                                            <li><a href="linkages/tcs.html">College Anthem</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown-submenu">
