--- a/Events.html
+++ b/Events.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT-V | About</title>
+    <title>IIIT-V | Events</title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
@@ -26,8 +26,8 @@
                             </div>
                             <div class="name">
                                 <a href="index.html" title="">
-                                    <h5>Indian Institute of Information Technology</h5>
-                                    <h5 class="primary-color">Vadodara</h5>
+                                    <h5>De La Salle College Colombo</h5>
+                                    <h5 class="primary-color">Mutwal</h5>
                                 </a>
                             </div>
                         </div>
