--- a/Events.html
+++ b/Events.html
@@ -138,7 +138,8 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <h6 class="card-title">Timeline</h6>
+                            <h5 class="card-title"><center><strong>Timeline</strong></center></h5>
+                            
                             <div id="content">
                                 <ul class="timeline">
                                     <li class="event" data-date="12:30 - 1:00pm">
