--- a/index.html
+++ b/index.html
@@ -583,10 +583,10 @@
             <div class="col-md-5 col-lg-4 m-15px-tb">
                 <div class="contact-name">
                     <h5>Mail</h5>
-                    <p>info@domainname.com</p>
+                    <p>college@delasalle.lk</p>
                 </div>
                 <div class="contact-name">
-                    <h5>Visit My Studio</h5>
+                    <h5><Address></Address></h5>
                     <p>Warnwe Park Streetperrine, <br>FL 33157 New York City</p>
                 </div>
                 <div class="contact-name">
