--- a/index.html
+++ b/index.html
@@ -369,27 +369,6 @@
     </script>  -->
     <!-- #endregion Jssor Slider End -->
 
-    <!-- WELCOME SCHOOL -->
-    <section style="margin-top: -1%;">
-        <div class="head-2"style="background-color:#fff;">
-            <div class="container">
-                <div class="head-2-inn head-2-inn-padd-top">
-                    <h1 style="color:#000;">WELCOME TO De La Salle COLLEGE</h1>
-                    <p style="color:#000;">St.De La Salle College is, by popular acknowledgement, Sri Lanka's leading Roman Catholic School for 
-                        boys. Effectively unchallenged, it has occupied this position ever since it was founded in 1896 by 
-                        French missionaries led by Rev. Fr. Christophe-Etienne Bonjean.
-                    </p>
-                    <p style="color:#000;">Over the years, the College has seen many changes Like all enduring institutions, it has often been obliged to adapt 
-                        to the needs and constraints of the historical movement. Yet, in spite of inevitable changes, St. Joseph's has never 
-                        deviated from its principal goal of producing men of faith, knowledge and virtue whose loved ones, fellow workers and society 
-                        at large may safely rely upon, and, from whose labour and advice they may continue to benefit as they have already 
-                        done for well over a century.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Announcements, Events, News -->
     <div class="widgets-wrapper">
         <div class="widgets-container">
@@ -607,7 +586,7 @@
                     <p>college@delasalle.lk</p>
                 </div>
                 <div class="contact-name">
-                    <h5><Address></Address></h5>
+                    <h5>Address</h5>
                     <p>Warnwe Park Streetperrine, <br>FL 33157 New York City</p>
                 </div>
                 <div class="contact-name">
