--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b
-                                        class="caret"></b></a>
-                                <ul class="dropdown-menu multi-level">
-                                    <li><a href="about.html">About</a></li>
-                                    <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="linkages/da-iict.html">Vision & Mission</a></li>
-                                            <li><a href="linkages/gsfc.html">Flag</a></li>
-                                            <li><a href="linkages/germi.html">Crest</a></li>
-                                            <li><a href="linkages/tcs.html">College Anthem</a></li>
-                                        </ul>
+                          <li> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><font size="2"> <strong> Institute  </font> <b class="caret"></b></strong>  </a>
+                            <ul class="dropdown-menu multi-level">
+                              <li><a href="http://iiitvadodara.ac.in/about.php">About</a></li>
+                              <li><a href="http://iiitvadodara.ac.in/vision.php">Vision | Mission | Objective </a></li>  
+                              <li><a href="http://iiitvadodara.ac.in/directors_message.php">Director's Message</a></li>
+                                
+                                <li class="dropdown-submenu"> <a href="#" class="dropdown-toggle" data-toggle="dropdown">Statutory Committee</a>
+                                   <ul class="dropdown-menu">
+                                  <li><a href="http://iiitvadodara.ac.in/bog.php">Board of Governors</a></li>
+                                  <li><a href="http://iiitvadodara.ac.in/senate.php">Senate</a></li>	
+                                  <li><a href="http://iiitvadodara.ac.in/finance_committee.php">Finance Committee</a></li>	 
+                                    </ul>
+                                </li>
                                     </li>
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
