--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             height: 450px;
         }
     </style>
-    
+
 <html lang="en">
 
 <head>
@@ -95,6 +95,11 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+
+    <link rel="stylesheet1" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style type="text/css">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
