--- a/announcements.html
+++ b/announcements.html
@@ -141,7 +141,7 @@
                 <div class="cor about-sp ed-rese-grid-announcements">
                     <div class="ed-about-tit">
                         <div class="pg-blog" style="margin-top:20px;margin-bottom: 20px;">
-                            <h4>Announcements</h4>
+                            <h4><center>Announcements</center></h4>
                         </div>
                         <div>
                             <div class="ho-event pg-eve-main">
