--- a/announcements.html
+++ b/announcements.html
@@ -145,15 +145,15 @@
                         </div>
                         <div>
                             <div class="ho-event pg-eve-main">
-                                <div class="An-tick yovf" style="height:600px;">
+                                <!--div class="An-tick yovf" style="height:600px;"-->
                                 <ul>
-                                    <!li>
+                                    <!--li>
                                         <div class="ho-ev-link pg-eve-desc">
                                             <a>
                                                 <h4>No Announcements.</h4>
                                             </a>
                                         </div>
-                                    </li>
+                                    </li-->
                                     <li>
                                         <div class="ho-ev-date pg-eve-date"><span>27</span><span>sep,2021</span>
                                         </div>
