--- a/index.html
+++ b/index.html
@@ -205,28 +205,28 @@
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
-                <!--div class="item slider1 active">
+                <div class="item slider1 active">
                     <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
-                        <source src="vid/BG_VIDEO.mp4" type="video/mp4">
-                    </video-->
-                    <!--div class="carousel-caption slider-con">
+                        <source src="vid/dlscrest.mp4" type="video/mp4">
+                    </video>
+                    <div class="carousel-caption slider-con">
                         <h2>Welcome to <span>University</span></h2>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</p>
                         <a href="#" class="bann-btn-1">All Courses</a><a href="#" class="bann-btn-2">Read More</a>
                     </div>
-                </div-->
+                </div>
                 <div class="item slider1 active">
-                    <img src="images/slider/1.jpg" alt="">
-                    <!--div class="carousel-caption slider-con">
+                    <img src="img/faded-monaco-scenery-evening-dark-picjumbo-com-image.jpg" alt="">
+                    <div class="carousel-caption slider-con">
                         <h2>Admission open <span>2018</span></h2>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</p>
                         <a href="#" class="bann-btn-1">Admission</a><a href="#" class="bann-btn-2">Read More</a>
-                    </div-->
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    
+
     <!-- carousel -->
     <div class="carousel-wrapper">
         <div class="carousel" style="margin: 0 auto">
