--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                 <div></div>
             </div>
             <div class="carousel-items">
-                <img height="400px" src="img/gallery/gallery.jpg" alt="Gallery">
-                <div></div>
+                <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
+                    <source src="vid/dlscrest.mp4" type="video/mp4">
             </div>
             <div class="carousel-items">
                 <img height="400px" src="img/gallery/students.jpg" alt="Students">
