--- a/index.html
+++ b/index.html
@@ -210,17 +210,14 @@
                         <source src="vid/dlscrest.mp4" type="video/mp4">
                     </video>
                     <div class="carousel-caption slider-con">
-                        <h2>Welcome to <span>University</span></h2>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</p>
-                        <a href="#" class="bann-btn-1">All Courses</a><a href="#" class="bann-btn-2">Read More</a>
+                        <h2>Welcome to <span>DLS</span></h2>
+        
                     </div>
                 </div>
                 <div class="item slider1 active">
-                    <img src="img/faded-monaco-scenery-evening-dark-picjumbo-com-image.jpg" alt="">
+                    <img src="img/1.jpg" alt="">
                     <div class="carousel-caption slider-con">
-                        <h2>Admission open <span>2018</span></h2>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</p>
-                        <a href="#" class="bann-btn-1">Admission</a><a href="#" class="bann-btn-2">Read More</a>
+                        
                     </div>
                 </div>
             </div>
@@ -235,8 +232,8 @@
                 <div></div>
             </div>
             <div class="carousel-items">
-                <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
-                    <source src="vid/dlscrest.mp4" type="video/mp4">
+                <img height="400px" src="img/gallery/gallery.jpg" alt="Gallery">
+                <div></div>
             </div>
             <div class="carousel-items">
                 <img height="400px" src="img/gallery/students.jpg" alt="Students">
