--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
     <section>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Wrapper for slides -->
-            <div class="carousel-inner">
+          <center>  <div class="carousel-inner">
                 <div class="item slider1 active">
                     <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
                         <source src="vid/dlscrest.mp4" type="video/mp4">
-                    </video>
+                    </video> </center>
                     <div class="carousel-caption slider-con">
                         <h2>Welcome to <span>DLS</span></h2>
         
