--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="carousel-caption slider-con">
                         <h2>Welcome to <span>DLS</span></h2>
         
-                        
+                    </div>  
                     </div>
                 </div>
             </div>
