--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 
     <!-- VIDEO -->
     <section>
+        <div id="myCarousel" class="header-wrapper" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item slider1 active">
@@ -211,7 +212,7 @@
                     <div class="carousel-caption slider-con">
                         <h2>Welcome to <span>DLS</span></h2>
         
-                    </div>  
+                        
                     </div>
                 </div>
             </div>
