--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     <!-- VIDEO -->
     <section>
-        <div id="myCarousel" class="header-wrapper" data-ride="carousel">
+        <div id="myCarouse" class="carousel-items" data-ride="carouse">
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item slider1 active">
