--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <div class="container">
         <div class="row">
             <div class="copy-right">
-            <!--marquee behavior="scroll" direction="left" onmousemove="this.stop();" onmouseout="this.start();"-->
+            <marquee behavior="scroll" direction="left" onmousemove="this.stop();" onmouseout="this.start();">
                 <a href="news-londonal-admission.php.html">
                     <span style="color:#fff;text-decoration:underline;font-weight:600;">
                         <center>
@@ -232,11 +232,12 @@
                         </center>
                     </span>
                 </a>
-            <!--/marquee-->
+            </marquee>
             </div>
         </div>
     </div>
     </section>
+    
     <!-- carousel -->
     <!--div class="carousel-wrapper">
         <div class="carousel" style="margin: 0 auto">
