--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--Snow Flakes-->
-<div class="snowflakes" aria-hidden="true">
+<!--div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
   ❅
   </div>
@@ -52,7 +52,7 @@
   <div class="snowflake">
     ❆
   </div>
-</div>
+</div-->
 
 
 
