--- a/about.html
+++ b/about.html
@@ -138,6 +138,8 @@
             <!-- Contents starts here -->
             <div class="content">
                 <h1>About us</h1>
+                <br>
+			   <img src="img/slider/slider3.jpg" alt="" style="margin-bottom:15px;">
                 <p>De La Salle College, situated at the entrance to the fishing community at
                     Mutwal, where the less - privileged and the marginalized eke out a modest
                     existence, has been a haven of knowledge and inspiration to all and sundry
